fixes on mobile

--- a/dev/css/blocks/modal.sass
+++ b/dev/css/blocks/modal.sass
@@ -24,6 +24,15 @@ body
             font-size: 30px
             line-height: 40px
             margin-bottom: 10px
+
+            @media (max-width: 412px)
+              font-size: 28px
+              line-height: 38px
+            @media (max-width: 400px)
+              font-size: 26px
+            @media (max-width: 370px)
+              font-size: 24px
+              line-height: 36px
           h2
             font-size: 50px
             line-height: 50px
