--- a/dev/css/blocks/school-view.sass
+++ b/dev/css/blocks/school-view.sass
@@ -69,6 +69,10 @@ body
 
       @media (max-width: 600px)
         height: auto
+      @media (max-width: 400px)
+        font-size: 23px
+      @media (max-width: 370px)
+        font-size: 21px
 
     p.description
       color: $fontColor
